Update .env.example with libSQL configuration

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,12 @@ CLIENT_ID=your_client_id_here
 CLIENT_SECRET=your_client_secret_here
 PUBLIC_KEY=your_public_key_here
 
-# Database
-DATABASE_PATH=your_database_path_here
+# Database - libSQL (Turso)
+LIBSQL_URL=file:./data/bot.db
+LIBSQL_AUTH_TOKEN=
 
-# Pandascore API Key
+# Guild ID for testing (instant command registration)
+TESTING_GUILD_ID=your_guild_id_here
+
+# PandaScore API Key
 PANDASCORE_API_KEY=your_pandascore_api_key_here
