--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,7 @@ TESTING_GUILD_ID=your_guild_id_here
 
 # PandaScore API Key
 PANDASCORE_API_KEY=your_pandascore_api_key_here
+
+# YouTube Data API v3 (para extrair nome de canais do YouTube)
+YOUTUBE_API_KEY=your_youtube_api_key_here
+
